# ml-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/data/: batcher.rs  dataset.rs  mod.rs  normalizer.rs
src/model/: config.rs  mod.rs  model.rs  step.rs  test.rs  train.rs
src/utils/: log.rs  misc.rs  mod.rs
