[package]
name = "ml-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
csv = "1.3.1"
ndarray = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
burn = { version = "0.16.0", features = ["wgpu", "train", "dataset"] }
log = "0.4.27"
rand = "0.9.0"
colored = "3.0.0"
env_logger = "0.11.7"
colog = "1.3.0"
chrono = "0.4.40"
